--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
 		</plugins>
 	</reporting>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>3.2.3.RELEASE</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
